# Iterative-HFold

./: .gitignore  CMakeLists.txt  HFold.cpp  HFold_iterative.cpp  HFold_pkonly.cpp  Iterative-HFold  Iterative-HFold.cpp  Iterative-HFold.hh  Makefile.am  README  README.md  Result.cc  Result.cpp  Result.h  VM_final.cpp  VM_final.h  V_final.cpp  V_final.h  W_final.cpp  W_final.h  build.sh  cmdline.cc  cmdline.hh  configure.ac  h_common.cpp  h_common.h  h_struct.h  hfold.h  hfold_iterative.h  hfold_validation.cpp  logfile.txt  meta.yaml  pseudo_loop.cpp  pseudo_loop.h
conda_recipe/: README.md  meta.yaml
params/: rna_CaoChen06.par  rna_CaoChen09.par  rna_DirksPierce09.par
simfold/: CMakeLists.txt  Makefile  Makefile.in  Makefile_useless  aclocal.m4  config.status  configure  dot.ps  free_energy.cpp  libsimfold.la  libtool  melting_temp.cpp  shape_data.cpp  shape_data.h  simfold  simfold.cpp  simfold.pc  simfold_pf  simfold_pf.cpp  test_get_counts  test_get_counts.cpp
simfold/.deps/: simfold.Po  simfold_pf.Po  test_get_counts.Po
simfold/.libs/: libsimfold.la  libsimfold.lai  libsimfold.so.0  libsimfold.so.0.0.0  lt-simfold  simfold  simfold_pf  test_get_counts
simfold/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
simfold/include/: constants.h  externs.h  globals.h  init.h  structs.h
simfold/src/common/: common.cpp  common.h  common.lo  init.cpp  init.lo  params.cpp  params.h  params.lo  timer.lo
simfold/src/common/.deps/: common.Plo  init.Plo  params.Plo  timer.Plo
simfold/src/simfold/: Hotspot.cc  Hotspot.cpp  Hotspot.h  hotspot.hh  s_energy_matrix.cpp  s_energy_matrix.h  s_energy_matrix.lo  s_hairpin_loop.cpp  s_hairpin_loop.h  s_hairpin_loop.lo  s_internal_loop.cpp  s_internal_loop.h  s_internal_loop.lo  s_min_folding.cpp  s_min_folding.h  s_min_folding.lo  s_multi_loop.cpp  s_multi_loop.h  s_multi_loop.lo  s_multi_loop_sub.cpp  s_multi_loop_sub.lo  s_partition_function.cpp  s_partition_function.lo  s_partition_function_ISMB.cpp  s_partition_function_RESTRICTED.cpp  s_partition_function_UNRESTRICTED.cpp  s_partition_function_complex.cpp  s_partition_function_savedangle.cpp  s_specific_functions.cpp  s_specific_functions.h  s_specific_functions.lo  s_stacked_pair.cpp  s_stacked_pair.h  s_stacked_pair.lo  s_sub_folding.cpp  s_sub_folding.lo
simfold/src/simfold/.deps/: s_energy_matrix.Plo  s_hairpin_loop.Plo  s_internal_loop.Plo  s_min_folding.Plo  s_multi_loop.Plo  s_multi_loop_sub.Plo  s_partition_function.Plo  s_specific_functions.Plo  s_stacked_pair.Plo  s_sub_folding.Plo
src/: Hotspot.cc  Iterative-HFold.cpp  Result.cc  Result.hh  V_final.cpp  V_final.h  W_final.cpp  W_final.hh  base_types.hh  cmdline.cc  cmdline.hh  config.h  constants.hh  h_common.h  h_externs.h  h_externs.hh  h_globals.h  h_globals.hh  h_struct.hh  hfold_pkonly.h  hfold_validation.cpp  hfold_validation.h  hotspot.hh  param_path.cc  pseudo_loop.cpp  pseudo_loop.h  pseudo_loop.hh  s_energy_matrix.cpp  s_energy_matrix.hh  sparse_tree.cc  sparse_tree.hh
src/ViennaRNA/: subopt.c
src/ViennaRNA/params/: basic.h  io.c  params.c
src/ViennaRNA/static/: energy_parameter_sets.h
src/params/: parameters_DP09_Vienna.txt
